# zygo

./: .gitignore  README.md
.github/workflows/: pypi.yml
crates/: Cargo.toml  justfile
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/proto/: orchestrator.proto
crates/core/src/: lib.rs
crates/core/src/engine/: arbiter.rs  engine.rs  executor.rs  mod.rs  runner.rs  state.rs  step.rs
crates/core/src/grpc/: convert.rs  mod.rs  parse.rs  service.rs  validate.rs
crates/core/src/grpc/actions/: handle_event.rs  mod.rs  register.rs
crates/core/src/models/: channel.rs  commands.rs  data_reference.rs  edge.rs  event.rs  ids.rs  job.rs  job_args.rs  job_entrypoint.rs  job_run.rs  mod.rs  orchestrator_mode.rs  result_cache.rs  run.rs  sequence_id.rs  stream.rs  stream_append_cursor.rs  types.rs  workflow.rs  workflow_version.rs
crates/core/src/store/: keyspace.rs  memory.rs  mod.rs  provider_interface.rs
crates/core/src/stream/: mod.rs  reader.rs  stream.rs  types.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/desktop/src/db/: README.md  db.rs  mod.rs
crates/desktop/src/db/adapters/: README.md  channel.rs  data_reference.rs  datetime.rs  edge.rs  event.rs  job.rs  mod.rs  run.rs  workflow.rs  workflow_version.rs
crates/desktop/src/db/migrations/: 20251206190206_create_initial_table.sql  20260209000000_event_source_refactor.sql
crates/desktop/src/db/models/: channel.rs  data_reference.rs  event.rs  job.rs  job_channel_edge.rs  mod.rs  run.rs  workflow.rs  workflow_version.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs  main.rs  memory_store.rs
crates/testing/src/generators/: entrypoint.rs  event.rs  generator.rs  job.rs  workflow.rs  world.rs
crates/testing/src/invariants/: check_is_replayed_events.rs  check_ordered_run_events.rs  check_replay_matches_original.rs  check_terminal_status.rs  invariant.rs  mod.rs  runner.rs
desktop/: README.md  justfile  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/.task/checksum/: build-frontend--PRODUCTION--  common-install-frontend-deps  generate-bindings--BUILD_FLAGS--buildvcs-false--gcflags-all---l--
desktop/src/: bindings.ts  index.css  main.tsx  routeTree.gen.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: grpc_client.rs  lib.rs  main.rs  models.rs
desktop/src/api/: get-workflow-version-schema.ts  index.ts  list-run-events.ts  list-runs.ts  list-workflows.ts
desktop/src/components/: test-flow.tsx
desktop/src/components/layout/: app-sidebar.tsx  blade.tsx
desktop/src/components/ui/: input.tsx  sidebar.tsx  tooltip.tsx
desktop/src/db/: run-events.ts  runs.tsx  workflow.tsx
desktop/src/features/run/components/: ChannelEventsSidebar.tsx  JobEventsSidebar.tsx  JobExecutionRow.tsx  (+1 more)
desktop/src/lib/: utils.ts
desktop/src/routes/: __root.tsx  index.tsx  settings.tsx
desktop/src/routes/workflow.$workflowId/: $runId.tsx  index.tsx  route.tsx
desktop/src/sync/: index.ts  provider.tsx
(+20 files in other folders)
