[package]
name = "zygo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zygo-core = { path = "../core" }
anyhow = { workspace = true }
service-manager = "0.11"
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

