[package]
name = "testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
arrayvec = "0.7.6"
petgraph = "0.8.3"
rand = "0.10.1"
rand_chacha = "0.10.0"
zygo-core = { path = "../core" }
tokio = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tokio = { workspace = true }
